<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_user_profile"
            android:title="@string/profile" />
    </group>
    <item android:title="Services">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_body"
                    android:icon="@drawable/ic_your_body"
                    android:title="@string/body" />
                <item
                    android:id="@+id/nav_relationship"
                    android:icon="@drawable/ic_relationship"
                    android:title="@string/relationships" />
                <item
                    android:id="@+id/nav_familyplanning"
                    android:icon="@drawable/ic_family_planning"
                    android:title="@string/family_planning" />
                <item
                    android:id="@+id/nav_HIV_STDs"
                    android:icon="@drawable/ic_health_center"
                    android:title="@string/diseases" />

                <item
                    android:id="@+id/nav_reproductive_health"
                    android:icon="@drawable/ic_hiv_aids"
                    android:title="@string/centers" />
            </group>
        </menu>
    </item>

    <item android:title="Take a look">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_explore_about"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
