<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/linearlayout_style"
    android:paddingTop="@dimen/padding_top58"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.hericxon.reprohealth.knowyourebody.Female"
    tools:showIn="@layout/activity_female">


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/body_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:visibility="visible"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            style="@style/linearlayout_style">

            <ImageView
                android:id="@+id/imageView_gender_vs_sex"
               style="@style/imageview_style"
                android:contentDescription="@string/imageview" />
            <Button
                android:id="@+id/female_puberty_btn"
                style="@style/button_style"
                android:text="@string/puberty_btn" />
            <Button
                android:id="@+id/female_organs_btn"
                style="@style/button_style"
                android:text="@string/female_organs_btn" />
            <Button
                android:id="@+id/ovulation_btn"
                style="@style/button_style"
                android:text="@string/ovulation" />
            <Button
                android:id="@+id/female_hormones_btn"
                style="@style/button_style"
                android:text="@string/female_hormones_btn" />
            <Button
                android:id="@+id/menstruation_btn"
                style="@style/button_style"
                android:text="@string/menstruation" />
            <Button
                android:id="@+id/menstruation_hygiene_btn"
                style="@style/button_style"
                android:text="@string/menstruation_hygiene" />
            <Button
                android:id="@+id/menstruation_concerns_btn"
                style="@style/button_style"
                android:text="@string/menstruation_concerns" />
            <Button
                android:id="@+id/menstruation_myths_btn"
                style="@style/button_style"
                android:text="@string/menstruation_myths" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>