<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
   style="@style/linearlayout_style"
    android:paddingTop="@dimen/padding_top58"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.hericxon.reprohealth.knowYoureBody.Male"
    tools:showIn="@layout/activity_male">


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/body_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:visibility="visible"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            style="@style/linearlayout_style">

            <ImageView
                android:id="@+id/imageView_gender_vs_sex"
                android:layout_width="match_parent"
                android:layout_height="@dimen/nav_header_height"
                android:contentDescription="@string/imageview" />
            <Button
                android:id="@+id/puberty_btn"
                style="@style/button_style"
                android:text="@string/puberty_btn"
                android:drawableLeft="@mipmap/ic_male_round"
                android:drawableStart="@mipmap/ic_male_round" />
            <Button
                android:id="@+id/male_organs_btn"
                style="@style/button_style"
                android:text="@string/male_organs_btn"
                android:drawableLeft="@mipmap/ic_male_round"
                android:drawableStart="@mipmap/ic_male_round" />
            <Button
                android:id="@+id/sperms_btn"
                style="@style/button_style"
                android:text="@string/sperms_btn"
                android:drawableLeft="@mipmap/ic_male_round"
                android:drawableStart="@mipmap/ic_male_round" />
            <Button
                android:id="@+id/semens_btn"
                style="@style/button_style"
                android:text="@string/semen_btn"
                android:drawableLeft="@mipmap/ic_male_round"
                android:drawableStart="@mipmap/ic_male_round" />
            <Button
                android:id="@+id/male_hormones_btn"
                style="@style/button_style"
                android:text="@string/male_hormones_btn"
                android:drawableLeft="@mipmap/ic_male_round"
                android:drawableStart="@mipmap/ic_male_round" />
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
