<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/linearlayout_style"
    android:paddingTop="@dimen/padding_top58"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.hericxon.reprohealth.knowYoureBody.YourBodyActivity"
    tools:showIn="@layout/activity_your_body">


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/body_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:visibility="visible"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">
    <LinearLayout
            style="@style/linearlayout_style">

        <ImageView
            style="@style/imageview_style"
            android:contentDescription="@string/imageview"/>

        <Button
            android:id="@+id/sex_btn"
            style="@style/button_style"
            android:drawableLeft="@mipmap/ic_male_round"
            android:drawableStart="@mipmap/ic_male_round"
            android:text="@string/sex_vs_gender_btn" />

        <Button
            android:id="@+id/gender_btn"
            style="@style/button_style"
            android:text="@string/gender_btn"
            android:drawableLeft="@mipmap/ic_male_round"
            android:drawableStart="@mipmap/ic_male_round" />
        <TextView
            android:id="@+id/body_txt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dime40"
            android:text="@string/know_youre_body"
            android:textSize="@dimen/dim20"
            android:textAlignment="center"
            android:background="@color/colorPrimary" />
        <RelativeLayout
            android:id="@+id/yourbody_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark2">
            <ImageButton
                android:id="@+id/imagebutton_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_male_round"
                android:background="@drawable/roundedbutton"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/dim30"
                android:contentDescription="@string/male"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/dim30"
                android:clickable="true"
                android:focusable="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:layout_below="@id/imagebutton_male"
                android:layout_marginLeft="@dimen/dim20"
                android:layout_alignLeft="@id/imagebutton_male"
                android:layout_alignStart="@id/imagebutton_male"
                android:layout_marginStart="@dimen/dim20" />

            <ImageButton
                android:id="@+id/imagebutton_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_male_round"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="@dimen/dim30"
                android:background="@drawable/roundedbutton"
                android:contentDescription="@string/female"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/dim30"
                android:clickable="true"
                android:focusable="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:layout_below="@id/imagebutton_female"
                android:layout_alignRight="@id/imagebutton_female"
                android:layout_marginRight="@dimen/dim8"
                android:textAlignment="center"
                android:layout_alignEnd="@id/imagebutton_female"
                android:layout_marginEnd="@dimen/dim8"/>

        </RelativeLayout>
        <Button
            android:id="@+id/emotions_btn"
            style="@style/button_style"
            android:text="@string/emtions_btn"
            android:drawableLeft="@mipmap/ic_male_round"
            android:drawableStart="@mipmap/ic_male_round" />
        <Button
            android:id="@+id/sex_and_sexuality_btn"
          style="@style/button_style"
            android:text="@string/sex_btn"
            android:drawableLeft="@mipmap/ic_male_round"
            android:drawableStart="@mipmap/ic_male_round" />
        <Button
            android:id="@+id/fertilty_and_pregnancy_btn"
           style="@style/button_style"
            android:text="@string/fertilty_btn"
            android:drawableLeft="@mipmap/ic_male_round"
            android:drawableStart="@mipmap/ic_male_round" />
        <!--test-->

    </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>